syntax = "proto3";
package peercommands;

message PeerAddReq {
  string Name = 1;
  repeated string Addresses = 2;
}

message PeerAddResp {
  int32 OpRet = 1;
  string OpError = 2;
  string UUID = 3;
}


message PeerGenericResp {
  int32 OpRet = 1;
  string OpError = 2;
}

message PeerDeleteReq {
  string ID = 1;
}

message StoreConfig {
 repeated string Endpoints = 1;
}

service PeerService {
  rpc ValidateAdd(PeerAddReq) returns(PeerAddResp) {}
  rpc ValidateDelete(PeerDeleteReq) returns(PeerGenericResp) {}
  rpc ReconfigureStore(StoreConfig) returns(PeerGenericResp) {}
}
